# spotishuffle

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt  wsgi.py
src/: config.py  main.py  server.py  spotishuffle.py  test_handlers.py  wsgi.py
src/resources/: db.py
src/templates/: index.html
