[tool.poetry]
name = "spotishuffle"
version = "0.1.0"
description = ""
authors = ["Slava Komarov <github@amlor.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
appdirs = "1.4.4"
fastapi = "0.88.0"
jinja2 = "3.1.2"
spotipy = "2.21.0"
ujson = "5.6.0"
uvicorn = {extras = ["standard"], version = "0.20.0"}
motor = {extras = ["srv"], version = "3.1.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
